syntax = "proto3";

message EmptyMessage {}
